# Create-font-from-glyph

./: .gitignore  README.md  pyproject.toml
create_font_from_glyph/: config.py  create_font.py  temp.pbm
fonts/Essential List/: Tibetan_Essential_Glyphs.txt
src/create_font_from_glyph/: base_font.py  base_font_creation.py  calculate_svg_baseline.py  calculate_svg_headline.py  check_duplicate_file.py  check_em_size.py  check_glyph_indices.py  check_glyph_name.py  config.py  convert_px_to_fontunit.py  convert_px_to_funit.py  create_font.py  detect_duplicate_file.py  determine_base_font_metrics.py  download_glyphs.py  extract_glyph_name.py  features.fea  find_baseline_of_font.py  find_glyph_indices.py  font.py  get_tibetan_char.py  look_for_glyf_table.py  modify_svg_headline.py  parse_svg_to_outlines.py  pipeline_for_font.py  pipeline_for_font_creation.py  pipeline_for_svg_creation.py  pipeline_for_svg_to_ttf.py  pipeline_for_svg_to_ttf_(unicode).py  pipeline_for_ttf_creation_(glyphName).py  pipeline_for_ttf_creation_monlam.py  pipeline_for_ttf_from_scratch.py  pipeline_ttf_creation.py  reduce_svg.py  search_unicode_value.py  svg_to_ttf.py  test.py  ttf_creation_from_monlam.py  unicode_encoded.py
tests/: test.py  test_config.py  test_get_edges.py  test_svg_to_ttf.py
