[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-font-from-glyph"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = description = """
Create custom fonts from individual glyphs using this Python package. This tool provides a simple and efficient way to assemble fonts by combining individual characters or glyphs into a single font file.
"""


readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
]
[project.dependencies]
Pillow = "Pillow"  # PIL library
svgwrite = "svgwrite"  # for creating SVG files
fonttools = "fonttools"  # for working with font files
numpy = "numpy"  # Numerical computing library
jsonlines = "jsonlines"  # for reading and writing JSON lines files
boto3 = "boto3"  # aws sdk for Python



[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
