[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-font-from-glyph"
version = "0.0.1"
authors = [
  { name = "OpenPecha", email = "dev@openpecha.org" }
]
description = "Create custom fonts from individual glyphs using this Python package. This tool provides a simple and efficient way to assemble fonts by combining individual characters or glyphs into a single font file."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies.dev]
names = ["pytest", "pytest-cov", "pre-commit"]

[project.urls]
Homepage = "https://github.com/OpenPecha/openpecha-project-template"
BugTracker = "https://github.com/OpenPecha/openpecha-project-template/issues"
